--- a/src/main/resources/templates/custoFixo/list.html
+++ b/src/main/resources/templates/custoFixo/list.html
@@ -32,7 +32,7 @@
                             <spaan th:text="${custoFixo.nome}"></spaan>
                         </td>
                         <td>
-                            <spaan th:text="${custoFixo.custoMensal}"></spaan>
+                            <spaan th:text="${custoFixo.custoMensalStr}"></spaan>
                         </td>
 
                         <td>
