--- a/src/main/resources/templates/produtos/list.html
+++ b/src/main/resources/templates/produtos/list.html
@@ -21,7 +21,7 @@
                     <spaan th:text="${produto.sku}"></spaan>
                 </td>
                 <td>
-                    <span th:text="${produto.preco}"></span>
+                    <span th:text="${produto.precoStr}"></span>
                 </td>
 
                 <td>
