--- a/src/main/resources/templates/estoque/form.html
+++ b/src/main/resources/templates/estoque/form.html
@@ -46,7 +46,7 @@
 
         var dados = {
             id: $('#idEstoque').val(),
-            produto: $('#produto').val(),
+            produtoDTO: $('#produto').val(),
             quantidade: $('#quantidade').val(),
         };
 
