--- a/src/main/resources/templates/estoque/list.html
+++ b/src/main/resources/templates/estoque/list.html
@@ -9,17 +9,17 @@
                 <th scope="col">Produto</th>
                 <th scope="col">SKU</th>
                 <th scope="col">Quantidade</th>
-                <th scope="col">Valor Total</th>
+                <th scope="col">Valor Total de Custo</th>
                 <th scope="col"></th>
             </tr>
             </thead>
             <tbody>
             <tr th:each="estoque : ${estoques}">
                 <td>
-                    <spaan th:text="${estoque.produto.produto}"></spaan>
+                    <spaan th:text="${estoque.produtoDTO.produto}"></spaan>
                 </td>
                 <td>
-                    <spaan th:text="${estoque.produto.sku}"></spaan>
+                    <spaan th:text="${estoque.produtoDTO.sku}"></spaan>
                 </td>
                 <td>
                     <spaan th:text="${estoque.quantidade}"></spaan>
@@ -49,7 +49,7 @@
     <div class="card-body">
         <div class="row d-flex align-items-center">
             <div class="col-8">
-                <h2 th:text="${'Valor total em estoque: R$'+valorTotal}"></h2>
+                <h2 th:text="${'Valor total em estoque: '+valorTotal}"></h2>
             </div>
         </div>
     </div>
